...

                OutlinedButton(
                    onClick = {
                        scope.launch {
                            mainViewModel.saveUserData(
                                UserPreferences.UserData(
                                    name = "Guest Pilot",
                                    email = "guest@moneypilot.app",
                                    photoUrl = null
                                )
                            ) {
                                onLoginSuccess()
                            }
...
